--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body>
+<body background="images/background.png">
     <div class="container">
-        <h1>Gif Tastic</h1>
+        <h1>GIF TASTIC</h1>
+        <br>
         <div id="buttons-view"></div>
-
+        <br>
         <form id="movie-form">
             <label for="gif-input">Add a Gif Title</label>
             <input type="text" id="gif-input">
             <br>
 
             <!-- Button triggers new Gif to be added -->
+            <br>
             <input id="add-gif" type="submit" value="Add">
             <div id="gifs-appear-here"></div>
         </form>
